# hazium

./: .gitignore  FOR_CLAUDE_CODE_INGESTION_07_03.md  FOR_CLAUDE_CODE_INGESTION_07_03b.md  FOUNDATIONS_CHAT_GPT.md  LICENSE  MANIFESTO.md  README.md  pyproject.toml
.github/workflows/: ci.yml  snapshots.yml
data/raw/: clh_intentions_ppp.jsonl  echa_svhc_candidate_list.jsonl
pipeline/: 01_ingest_kemi_sales.py  02_ingest_kemi_register.py  03_build_graph.py  04_ingest_openfoodtox.py  05_ingest_clp.py  06_ingest_eu_ppdb.py  07_build_ml_dataset.py  08_eval_baseline.py  09_ingest_kemi_reevaluations.py  10_embed_eval.py  11_export_powerbi.py  12_run_hewb.py  13_current_watchlist.py  14_ingest_literature_volume.py  15_export_site_data.py  17_ingest_media_volume.py  18_export_rank_race.py  19_export_substances.py  20_run_robustness.py  21_export_hewb_release.py  22_run_snapshots.py  24_export_evidence_mesh.py
release/hewb-v1.4/: LICENSE  README.md  manifest.json
src/hazium/: __init__.py  models.py
tests/: test_benchmark_hewb.py  test_clp.py  test_echa_clh.py  test_eu_ppdb.py  test_explain_shap.py  test_gdelt.py  test_graph.py  test_graph_build.py  test_graph_merge.py  test_kemi.py  test_kemi_reevaluations.py  test_kemi_register.py  test_layout3d.py  test_ml_baseline.py  test_ml_dataset.py  test_ml_embed.py  test_ml_evaluate.py  test_ml_features.py  test_models.py  test_openfoodtox.py  test_resolve_names.py  test_robustness.py  test_snapshots.py  test_timeline.py
web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
web/components/: CapabilityTimeline.tsx  (+11 more)
(+46 files in other folders)
