[project]
name = "hazium"
version = "0.0.1"
description = "Explainable ML platform for early detection of emerging environmental and public health hazards from public data"
requires-python = ">=3.12"
dependencies = [
    "pdfplumber>=0.11",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hazium"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
