[project]
name = "hazium"
version = "0.0.1"
description = "Explainable ML platform for early detection of emerging environmental and public health hazards from public data"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1",
    "pdfplumber>=0.11",
    "pydantic>=2.0",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "shap>=0.46",
    "gensim>=4.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hazium"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
